--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 
 .form {
     height: 600px;
-    background-color: #f5f5f5;
-    width: 300px;
+    background-color: #eee;
+    width: 270px;
     padding: 0;
     margin: 1rem;
     border: none;
@@ -49,7 +49,7 @@ body {
 .console {
     width: 100%;
     height: 180px;
-    background-color: blanchedalmond;
+    /* background-color: blanchedalmond; */
     margin-top: 0.5rem;
    
 }
@@ -57,7 +57,7 @@ body {
 .btn {
     height: 360px;
     width: 100%;
-    background-color: aqua;
+    /* background-color: aqua; */
     flood-opacity: inherit;
     margin-top: 15px;
     
@@ -66,7 +66,7 @@ body {
 .display-box {
     font-family: 'Orbitron', sans-serif;
     background-color: transparent;
-    border: solid black 0.5px;
+    border: none
     color: black;
     border-radius: 10px;
     width: 95%;
@@ -78,11 +78,12 @@ input[type=button] {
     font-family: 'Poppins', sans-serif;
     background-color: rgb(236, 234, 234);
     color: black;
-    border: solid black 0.5px;
-    width: 60px;
+    border: solid rgb(240, 235, 235) 0.1px;
+    width: 50px;
     border-radius: 50%;
-    height: 60px;
+    height: 50px;
     outline: none;
     box-shadow: 0px 4px 10px rgb(200, 197, 197);;
     cursor: pointer;
+    margin: 5px
 }
