--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 .display-box {
     font-family: 'Orbitron', sans-serif;
     background-color: transparent;
-    border: none
+    border: none;
     color: black;
     border-radius: 10px;
     width: 95%;
