--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ body {
     border: none;
     border-radius: 1rem;
     box-shadow: 10px 5px 5px rgb(200, 197, 197);
-    display: block;
-    text-align: center;
 }
 
 .navbar {
@@ -49,41 +47,127 @@ body {
 .console {
     width: 100%;
     height: 180px;
-    /* background-color: blanchedalmond; */
-    margin-top: 0.5rem;
-   
-}
-
-.btn {
-    height: 360px;
-    width: 100%;
-    /* background-color: aqua; */
-    flood-opacity: inherit;
-    margin-top: 15px;
-    
+    background-color: transparent;
+    margin-top: 0.5rem; 
+    display: table-cell;
+    vertical-align: bottom;
 }
 
 .display-box {
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Arial', sans-serif;
+    font-size: 2.8rem;
+    font-weight: 600;
+    direction: rtl;
     background-color: transparent;
     border: none;
     color: black;
     border-radius: 10px;
     width: 95%;
-    height: 95%;
+    height: 30%;
     
+
+    
+    
+
 }
 
-input[type=button] {
+.btn {
+    height: 360px;
+    width: 100%;
+    background-color: rgb(36, 9, 61);
+    margin-top: 15px;
+    opacity: 50%;
+    display: flexbox;
+    position: inherit;
+}
+
+.btn-form {
     font-family: 'Poppins', sans-serif;
     background-color: rgb(236, 234, 234);
     color: black;
     border: solid rgb(240, 235, 235) 0.1px;
-    width: 50px;
+    width: 55px;
     border-radius: 50%;
-    height: 50px;
+    height: 55px;
     outline: none;
     box-shadow: 0px 4px 10px rgb(200, 197, 197);;
     cursor: pointer;
-    margin: 5px
+    text-align: center;   
+}
+
+.delete {
+    background-color: aqua;
+    text-align: right;
+    margin-right: 1rem;
+    margin-left: 1rem;
+}
+
+.first-level {
+    background-color: bisque;
+    text-align: left;
+    margin-left: 1.1rem;
+    margin-top: 0.3rem;
+    bottom: 0px;
+    margin-right: 4.9rem;
+}
+
+.second-level {
+    background-color: rgb(152, 93, 22);
+    text-align: left;
+    margin-left: 1.1rem;
+    bottom: 0px;
+    margin-top: 0.3rem;
+    margin-right: 4.9rem
+}
+
+.third-level {
+    background-color: rgb(152, 93, 22);
+    text-align: left;
+    margin-left: 1.1rem;
+    bottom: 0px;
+    margin-top: 0.3rem;
+}
+
+.fourth-level {
+    background-color: rgb(152, 93, 22);
+    text-align: left;
+    margin-left: 1.1rem;
+    bottom: 0px;
+    margin-top: 0.3rem;
+}
+
+.fifth-level {
+    background-color: rgb(152, 93, 22);
+    text-align: left;
+    margin-left: 1.1rem;
+    bottom: 0px;
+    margin-top: 0.3rem;
+}
+
+.sixth-level {
+    background-color: rgb(152, 93, 22);
+    text-align: left;
+    margin-left: 1.1rem;
+    bottom: 0px;
+    margin-top: 0.3rem;
+}
+
+.equal {
+
+}
+
+.btn-equal {
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(112, 9, 196);
+    font-weight: 600;
+    font-size: 1.6rem;
+    color: rgb(255, 255, 255);
+    border: solid rgb(240, 235, 235) 0.1px;
+    width: 55px;
+    border-radius: 30px;
+    height: 110px;
+    outline: none;
+    box-shadow: 0px 4px 10px rgb(200, 197, 197);;
+    cursor: pointer;
+    text-align: center;  
 }
