Add darkmode to the project and attached the button to change styles

--- a/style.css
+++ b/style.css
@@ -3,13 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
 
-
-
 * {
     transition: background-color 0.3s ease, color 0s ease;
   }
 
-:root[data-theme="light"] {
+:root {
     --themeBkg: linear-gradient(0deg, rgba(223,227,229,1) 0%, rgba(254,254,254,1) 100%);
     --themeContainer: linear-gradient(0deg, rgba(232,236,237,1) 0%, rgba(254,254,254,1) 100%);
     --themeConsole: #535b60;
@@ -24,7 +22,7 @@
     --displayParagraphDark: hidden;
 }
 
-:root[data-theme="dark"] {
+.dark {
     --themeBkg: linear-gradient(0deg, rgba(30,34,37,1) 0%, rgba(46,50,53,1) 100%);
     --themeContainer: linear-gradient(0deg, rgba(30,34,37,1) 0%, rgba(75,79,80,1) 100%);
     --themeConsole: #a8aeab;
@@ -35,6 +33,7 @@
     --themeMainBtnBkg: #3a3b3f;
     --themeMainIcon: rgb(233, 229, 229);
     --themeBoxShadow: 3px 3px 5px rgb(58, 59, 63);
+    
 }
 
 .darkmode-txt {
@@ -51,7 +50,6 @@
     
 }
 
-    
 body {
     font-family: 'Poppins', sans-serif;
     color: black;
